Update Valentine's card question text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <!-- INSIDE (opened – hidden initially) -->
       <div class="card-inside hidden" id="cardInside">
-        <h2 class="question">Mandy, will you be my Valentine?</h2>
+        <h2 class="question">Honey, will you be my Valentine?</h2>
         <div class="buttons" id="actionButtons">
           <button class="heart-btn" id="yesBtn"><i class="fas fa-heart"></i> Yes</button>
           <button class="no-btn" id="noBtn">No</button>
@@ -33,3 +33,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
